# loan-manager

./: .gitignore  AGENTS.MD  BACKEND_COMPLETE.md  BUSINESS_REQUIREMENTS.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS_PHASE2.md  IMPLEMENTATION_SUMMARY.md  LOAN_APPROVAL_SYSTEM.md  Makefile  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE2_PROGRESS_UPDATE.md  PR_SUMMARY.md  TASKS.MD  TODO.md  USE_CASES.MD  VEHICLE_COST_LEDGER_PROGRESS.md  VERIFICATION_FINDINGS.md  WORKSHOP_UX_PLAN.md  bike-repair-todo.md  doc.md  package.json  task.md  todo-draft.md
backend/: pyproject.toml  requirements.txt
backend/alembic/versions/: 016_create_audit_logs_table.py
backend/app/: auth.py  config.py  db.py  errors.py  main.py  middleware.py  rbac.py
backend/app/models/: __init__.py  audit.py  audit_log.py  bicycle.py  bicycle_application.py  bicycle_expense.py  bicycle_sale.py  bicycle_transfer.py  bill_number_sequence.py  branch.py  chart_of_accounts.py  client.py  commission_rule.py  company.py  customer_bank_account.py  customer_employment.py  customer_guarantor.py  fund_source.py  hr_attendance.py  hr_bonus.py  hr_leave.py  idempotency.py  job.py  journal_entry.py  leave_approval.py  loan.py  loan_application.py  loan_application_audit.py  loan_application_customer.py  loan_application_decision.py  loan_application_document.py  loan_application_vehicle.py  loan_approval_threshold.py  loan_product.py  petty_cash.py  reference.py  stock_number.py  user.py  vehicle_cost_ledger.py  vehicle_cost_summary.py  (+5 more)
backend/app/routers/: admin.py  analytics.py  (+40 more)
(+207 files in other folders)
