[tool.poetry]
name = "loan-manager-backend"
version = "0.1.0"
description = "FastAPI backend for Loan Manager"
authors = ["Loan Manager Team <dev@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.115.0"
uvicorn = {version = "0.30.6", extras = ["standard"]}
pydantic = "2.8.2"
pydantic-settings = "2.6.1"
sqlalchemy = { version = "2.0.36", extras = ["asyncio"] }
asyncpg = "0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
httpx = "0.27.0"
ruff = "0.5.7"
black = "24.8.0"
mypy = "1.11.1"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true


